<resources>
    <string name="app_name">Kevin Loves Wieners</string>
    <string name="bg1">bg1</string>
    <string name="bg2">bg2</string>
    <string name="back_1">back_1</string>
    <string name="wiener">wiener</string>
    <string name="points">30 Points</string>
    <string name="head">head</string>
    <string name="score">Score : %d</string>
    <string name="wiener_point">30 Points</string>
    <string name="result_score">%d</string>
    <string name="high_score">High Score: %d</string>
    <string name="final_score">%d</string>
    <string name="start">Tap to Start</string>
    <string name="over">GAME OVER</string>
    <string name="try_again">Try Again</string>
    <string name="strt_but">START</string>
</resources>
