<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="kevin.wiener.game.MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/score_board"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/score" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/bg1"
            android:layout_width="1215dp"
            android:layout_height="684dp"
            android:contentDescription="@string/bg1"
            android:visibility="visible"
            app:srcCompat="@drawable/bg1" />

        <ImageView
            android:id="@+id/bg2"
            android:layout_width="1215dp"
            android:layout_height="684dp"
            android:contentDescription="@string/bg2"
            android:visibility="visible"
            app:srcCompat="@drawable/bg2" />

        <ImageView
            android:id="@+id/kevin"
            android:layout_width="74dp"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/head"
            android:cropToPadding="false"
            android:visibility="visible"
            app:srcCompat="@drawable/kevin_open2"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/wiener"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wiener"
            app:srcCompat="@drawable/wiener" />

        <TextView
            android:id="@+id/to_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/start"
            android:text="@string/start"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#070707"
            android:textColorLink="#040303"
            android:textSize="44sp"
            android:translationX="40dp"
            android:visibility="visible"
            app:fontFamily="monospace" />


    </FrameLayout>


</LinearLayout>